# djangocms-markdown

./: .coverage  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  THIRD_PARTY_LICENSES  pyproject.toml
.github/workflows/: publish-to-live-pypi.yml  publish-to-test-pypi.yml  test.yml
djangocms_markdown/: apps.py  cms_plugins.py  fields.py  forms.py  models.py  references.py  rendering.py  sanitizer.py  settings.py  widgets.py
djangocms_markdown.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
djangocms_markdown/extensions/: delete.py
djangocms_markdown/migrations/: 0001_initial.py
djangocms_markdown/static/djangocms_markdown/css/: markdown_editor.css  preview_typography.css
djangocms_markdown/static/djangocms_markdown/js/: markdown_editor.js
djangocms_markdown/templates/djangocms_markdown/plugins/: markdown.html
djangocms_markdown/templatetags/: djangocms_markdown_tags.py
tests/: settings.py  test_cms_plugin.py  test_fields.py  test_forms.py  test_models.py  test_references.py  test_rendering.py  test_sanitizer.py  test_templatetags.py  test_widgets.py
tests/migrations/: 0001_initial.py
