[build-system]
requires = ["setuptools>=64", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "djangocms-markdown"
version = "0.1.0"
description = "Markdown content plugin and field for django CMS"
readme = "README.md"
license = {text = "BSD-3-Clause"}
authors = [
    {name = "Fabian Braun"},
]
requires-python = ">=3.10"
dependencies = [
    "django>=4.2",
    "django-cms>=3.11",
    "markdown>=3.5",
    "pymdown-extensions>=10.0",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: Django",
    "Framework :: Django :: 4.2",
    "Framework :: Django :: 5.0",
    "Framework :: Django :: 5.1",
    "Framework :: Django :: 5.2",
    "Framework :: Django CMS",
    "Framework :: Django CMS :: 3.11",
    "Framework :: Django CMS :: 4.1",
    "Framework :: Django CMS :: 5.0",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
]

[project.urls]
Homepage = "https://github.com/fsbraun/djangocms-markdown"

[project.optional-dependencies]
test = [
    "pytest>=7.0",
    "pytest-django>=4.5",
    "pytest-cov>=4.0",
]

[tool.setuptools.packages.find]
include = ["djangocms_markdown*"]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "tests.settings"
pythonpath = ["."]
python_files = ["tests/test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--strict-markers -v"

[tool.coverage.run]
source = ["djangocms_markdown"]
omit = ["*/migrations/*"]

[tool.coverage.report]
show_missing = true
fail_under = 80
